--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -97,6 +97,9 @@
       {% if author.wechat %}
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.wechat }}</li>
       {% endif %}
+      {% if author.qq %}
+        <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.qq }}</li>
+      {% endif %}
       {% if author.flickr %}
         <li><a href="https://www.flickr.com/{{ author.flickr }}"><i class="fab fa-fw fa-flickr" aria-hidden="true"></i> Flickr</a></li>
       {% endif %}
